--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,5 +22,9 @@
         <activity
             android:name=".SearchActivity"
             android:label="@string/search" />
+
+        <activity
+            android:name=".ItemActivity"
+            android:label="@string/details" />
     </application>
 </manifest>
